tests/rosetta/out/Java/call-a-function-9.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// call-a-function-9.mochi
import java.util.*;

public class CallAFunction9 {
    static List<Object> f() {
        return Arrays.asList(0, 0.000000);
    }
    static int g(int a, double b) {
        return 0;
    }
    static void h(String s, List<Integer> nums) {
    }
    static void main() {
        List<Object> ab = f();
        List<Object> a = ab.get(0);
        List<Object> b = ab.get(1);
        List<Object> cb = ((Map<?,?>)f()).get(1);
        int d = g(a, cb);
        int e = g(d, b);
        int i = g(d, 2.000000);
        List<Integer> list = Arrays.asList();
        list.add(a);
        list.add(d);
        list.add(e);
        list.add(i);
        i = (int)(list.size());
    }
    public static void main(String[] args) {
        main();
    }
}
